vlib/v/checker/tests/wrong_type_casted_fixed_array_size_err.vv
const b = f32(3)

enum Foo {
	first = 5
	second

	_end = 9
}

a := [b]int{}
println(a)

c := [f32(Foo.first)]int{}
println(c)
